integration front and back

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
                             High level experience in software development knowledge, producing quality work.
                         </p>
 
-                        <a href="#" class="button button--flex">
+                        <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
                     </div>
@@ -141,20 +141,21 @@
                 <img src="assets/img/about.png" alt="" class="about__img">
                 <div class="about__data">
                     <p class="about__description">
-                        Web developer, with extensive knowledge and years of experience, working in web technologies and
-                        Ui / Ux design, delivering quality work.
+
+                        Hi, I'm David, passionate about technology, every project I do is a challenge for me, I really
+                        like programming, I hope to be part of your great idea.
                     </p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">08+</span>
+                            <span class="about__info-title">02+</span>
                             <span class="about__info-name">Years <br> experience</span>
                         </div>
                         <div>
-                            <span class="about__info-title">20+</span>
+                            <span class="about__info-title">5+</span>
                             <span class="about__info-name">Completed <br> project</span>
                         </div>
                         <div>
-                            <span class="about__info-title">05+</span>
+                            <span class="about__info-title">01+</span>
                             <span class="about__info-name">Companies <br> worked</span>
                         </div>
                     </div>
@@ -634,11 +635,11 @@
                     </div>
                 </div>
 
-                <form   class="contact__form grid" name="contactar">
+                <form class="contact__form grid" name="contactar">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input"  name="name" required>
+                            <input type="text" class="contact__input" name="name" required>
                             <small class="invalid-feedback"></small>
                         </div>
                         <div class="contact__content">
@@ -714,7 +715,7 @@
 
     <!--==================== MAIN JS ====================-->
     <!-- MAIN JS -->
-   
+
 </body>
 
 </html>
