--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <script type="module" src="./assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
@@ -97,7 +97,7 @@
                                 176.5,432Q131,456,112,419Q93,382,79.5,349.5Q66,317,47.5,283.5Q29,250,52,218Q75,186,74.5,144Q74,102,
                                 118.5,101Q163,100,185.5,56.5Q208,13,243,51Q278,89,323,67Q368,45,399,72Q430,99,454,133Q478,167,446,
                                 208.5Q414,250,406,277Z" />
-                                <image class="home__blob-img" x='80' y='40' xlink:href="assets/img/facegoku.png" />
+                                <image class="home__blob-img" x='80' y='40' xlink:href="./assets/img/facegoku.png" />
                             </g>
                         </svg>
 
@@ -137,8 +137,8 @@
             <h2 class="section__title">About me</h2>
             <span class="section__subtitle">My introduction</span>
 
-            <div class="about__container container grid">
-                <img src="assets/img/about.png" alt="" class="about__img">
+            <div class="about__container container grid">                
+                <img src="./assets/img/about.png" alt="" class="about__img">
                 <div class="about__data">
                     <p class="about__description">
 
@@ -161,7 +161,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a href="assets/pdf/David-Matos.pdf" class="button button--flex">
+                        <a href="./assets/pdf/David-Matos.pdf" class="button button--flex">
                             Dowload CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
 
@@ -493,7 +493,7 @@
                 <!-- <div class="services__modal-close">
                     <i class="uil uil-times "></i>                
                 </div> -->
-                <img src="assets/img/proyectos/modulodeactualizaciondesistemas.png"
+                <img src="./assets/img/proyectos/modulodeactualizaciondesistemas.png"
                     alt="Módulo de Actualización de Sistemas" id="modal-img" class="services__modal-img">
             </div>
         </div>
@@ -506,7 +506,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/proyectos/modulodeactualizaciondesistemas.png"
+                        <img src="./assets/img/proyectos/modulodeactualizaciondesistemas.png"
                             alt="Módulo de Actualización de Sistemas"
                             data-src-img="assets/img/proyectos/modulodeactualizaciondesistemas.png"
                             class="portfolio__img">
@@ -521,7 +521,7 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/proyectos/modulofirmasdigitalez.png" alt="Módulo de Firmas Digitales"
+                        <img src="./assets/img/proyectos/modulofirmasdigitalez.png" alt="Módulo de Firmas Digitales"
                             data-src-img="assets/img/proyectos/modulodeactualizaciondesistemas.png"
                             class="portfolio__img">
                         <div class="portfolio__data">
@@ -535,7 +535,7 @@
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/proyectos/reseteodecontraseñas.png" alt="Módulo de Reseteo de Contraseñas"
+                        <img src="./assets/img/proyectos/reseteodecontraseñas.png" alt="Módulo de Reseteo de Contraseñas"
                             data-src-img="assets/img/proyectos/modulodeactualizaciondesistemas.png"
                             class="portfolio__img">
                         <div class="portfolio__data">
@@ -549,7 +549,7 @@
                         </div>
                     </div>
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/proyectos/modulomarcacion.png" alt="Módulo de Reseteo de Contraseñas"
+                        <img src="./assets/img/proyectos/modulomarcacion.png" alt="Módulo de Reseteo de Contraseñas"
                             data-src-img="assets/img/proyectos/modulomarcacion.png" class="portfolio__img">
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Módulo de Marcación</h3>
@@ -562,7 +562,7 @@
                         </div>
                     </div>
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/proyectos/sistemanacionademesadeayuda.png"
+                        <img src="./assets/img/proyectos/sistemanacionademesadeayuda.png"
                             data-src-img="assets/img/proyectos/sistemanacionademesadeayuda.png"
                             alt="Módulo de Reseteo de Contraseñas" class="portfolio__img">
                         <div class="portfolio__data">
@@ -600,7 +600,7 @@
                             <i class="uil uil-message project__icon button__icon"></i>
                         </a>
                     </div>
-                    <img src="assets/img/vegetaParado.png" alt="vegeta" class="project__img">
+                    <img src="./assets/img/vegetaParado.png" alt="vegeta" class="project__img">
                 </div>
             </div>
 
