add last projects

--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
             <h2 class="section__title">About me</h2>
             <span class="section__subtitle">My introduction</span>
 
-            <div class="about__container container grid">                
+            <div class="about__container container grid">
                 <img src="./assets/img/about.png" alt="" class="about__img">
                 <div class="about__data">
                     <p class="about__description">
@@ -504,6 +504,42 @@
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
+                    <!--==================== PORTFOLIO 0 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <!-- <a href="https://david-matos-salvador.github.io/LandingPage/" target="_blanck"> -->
+                            <img src="./assets/img/proyectos/landingpage.png"
+                                alt="Módulo de Actualización de Sistemas"
+                                data-src-img="assets/img/proyectos/landingpage.png"
+                                class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Landing Page</h3>
+                                <p class="portfolio__description">Landing Page para practicar desarrollo Frontend <strong></strong> 
+                                </p>
+                                <a href="https://david-matos-salvador.github.io/LandingPage/" class="button button--flex button--small portfolio__button" target="_blanck">
+                                    Ir a pagina <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>                       
+                    </div>
+
+                    <!--==================== PORTFOLIO 0 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                            <img src="./assets/img/proyectos/testwork.png"
+                                alt="Módulo de Actualización de Sistemas"
+                                data-src-img="assets/img/proyectos/testwork.png"
+                                class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">TestWork</h3>
+                                <p class="portfolio__description">Aplicación que realicé para postular a un trabajo
+                                    freelance. La aplicación
+                                    consume el api public llamada <strong>jsonplaceholder</strong> 
+                                </p>
+                                <a href="https://david-matos-salvador.github.io/testwork2/" class="button button--flex button--small portfolio__button" target="_blanck">
+                                    Ir a pagina <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+
+                            </div>
+                       
+                    </div>
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="./assets/img/proyectos/modulodeactualizaciondesistemas.png"
@@ -515,7 +551,7 @@
                             <p class="portfolio__description">Proyecto para el sector privado.
                                 Su función es actualizar los sistemas de escritorio tan solo con un click fue creado
                                 utilizando la librería jCIFS.
-                                Este módulo web esta creado en lenguaje java utilizando Spring Framework MVC.</p>
+                                <strong>Spring Framework MVC</strong></p>
 
                         </div>
                     </div>
@@ -529,13 +565,13 @@
                             <p class="portfolio__description">Proyecto para el sector privado. Su función es mostrarle
                                 las firmas al usuario de los diferentes tipos de abogados para verificar si es la
                                 correcta.
-                                Este módulo web esta creado con el lenguaje java utilizando JAX-RS como backend y
-                                Angular 8 para el frontend.</p>
+                                <strong>java JAX-RS</strong> - <strong> Angular 8 </strong></p>
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="./assets/img/proyectos/reseteodecontraseñas.png" alt="Módulo de Reseteo de Contraseñas"
+                        <img src="./assets/img/proyectos/reseteodecontraseñas.png"
+                            alt="Módulo de Reseteo de Contraseñas"
                             data-src-img="assets/img/proyectos/modulodeactualizaciondesistemas.png"
                             class="portfolio__img">
                         <div class="portfolio__data">
@@ -543,8 +579,7 @@
                             <p class="portfolio__description">Proyecto para el sector privado.
                                 Su función es resetear la contraseña de los usuarios en los diferentes sistemas internos
                                 de la institución.
-                                Este módulo web esta creado con el lenguaje java utilizando Spring Framework 4 como
-                                backend y Angular 9 para el frontend.</p>
+                               <strong>Spring Framework 4 - Angular 9 </strong></p>
 
                         </div>
                     </div>
@@ -556,8 +591,7 @@
                             <p class="portfolio__description">Proyecto para el sector privado.
                                 sistema creado para realizar las marcaciones de los usuarios y llevar un control del
                                 horario trabajado. cuenta con 3 roles: usuario, rrhh, jefe de áre y reportes de usuario.
-                                Este módulo web esta creado con el lenguaje java utilizando Spring Framework 5 como
-                                backend y Angular 10 para el frontend.</p>
+                                  <strong>Spring Framework 5  - Angular 10 </strong> </p>
 
                         </div>
                     </div>
@@ -570,7 +604,7 @@
                             <p class="portfolio__description">Proyecto para el sector privado.
                                 Encargado de migrar el sistema realizado en Laravel ha Spring Framework manejando una
                                 arquitectura de microservicios.
-                                Para la realizacion del backend se utilizo Spring Framework utilizando Eureka server.
+                                 <strong>Spring Cloud</strong>
                             </p>
 
                         </div>
@@ -659,7 +693,7 @@
                         <small class="invalid-feedback"></small>
                     </div>
                     <div>
-                        <button id="sendMessage" class="button button--flex" >
+                        <button id="sendMessage" class="button button--flex">
                             Send Message
                             <i class="uil uil-message button__icon"></i>
                         </button>
